--- a/style/index.css
+++ b/style/index.css
@@ -23,15 +23,7 @@ nav{
     display: flex;
 }
 
-#titulo{
-    width: 50%;  
-    color: white;
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-}
-
-#link{
+#menu{
     width: 50%;   
     display: flex;
     justify-content: flex-start;
@@ -52,6 +44,7 @@ header{
     height: auto;
     display: flex;
     justify-content: center;
+    background-color: black;
 }
 
 header h1{
@@ -69,7 +62,7 @@ header h1{
 /* INICIO MAIN */
 #post{
     min-width: 350px;
-    max-width: 800px;
+    max-width: 1200px;
     padding: 20px;
     height: auto;
     margin: 0px auto;
@@ -180,21 +173,12 @@ footer{
 /*  */
 /*  */
 /* @media */
- @media screen and (max-width:730px){
+ /* @media screen and (max-width:730px){
     #pagina, #post, #post2, #post3{
         background-color: black;
         color: white;
         box-shadow: 5px 5px 50px greenyellow;
     }
        
-} 
+}  */
 
-@media screen and (min-width: 731px) and (max-width:1500px){
-    #post, #post2, #post3{
-        background: rgb(58,180,178);
-        background: linear-gradient(42deg, rgba(58,180,178,1) 5%, rgba(176,58,180,1) 14%, rgba(42,29,253,1) 37%, rgba(29,159,253,1) 64%, rgba(42,29,253,1) 100%);
-        color: white;
-        box-shadow: 5px 5px 50px greenyellow;
-    }
-    
-} 
